delete data after e2e test